--- a/praticando_html_css/index.html
+++ b/praticando_html_css/index.html
@@ -17,8 +17,8 @@
             <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
                 único.</h1>
             <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
-            <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
-            <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
+            <a href="https://www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
+            <a href="https://www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
             <p class="container__aviso">* O preço pode variar caso a assinatura seja feita em outros planos.</p>
         </div>
     </section>
@@ -38,7 +38,7 @@
                 Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
                 tecnologia e aprender inglês ou espanhol, onde e como quiser.
             </p>
-            <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
+            <a href="https://www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
         </div>
         <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
@@ -53,6 +53,52 @@
         </div>
     </section>
 
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+            <li>
+                <img src="img/tv.png" alt="ícone de televisão">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="img/computador.png" alt="ícone de computador">
+                <h3 class="lista__item">Computadores</h3>
+            </li>
+            <li>
+                <img src="img/celular.png" alt="ícone de celular">
+                <h3 class="lista__item">Celular</h3>
+            </li>
+        </ul>
+    </section>
+
+    <footer class="rodape">
+        <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
+        <ul class="rodape__lista">
+            <li>
+                <a class="lista__link" href="#">Idioma</a>
+            </li>
+            <li>
+                <a class="lista__link" href="#">Dispositivos Compatíveis</a>
+            </li>
+            <li>
+                <a class="lista__link" href="#">Contrato de assinatura</a>
+            </li>
+            <li>
+                <a class="lista__link" href="#">Politica de privacidade</a>
+            </li>
+            <li>
+                <a class="lista__link" href="#">Proteção de dados no Brasil</a>
+            </li>
+            <li>
+                <a class="lista__link" href="#">Anúncios personalizados</a>
+            </li>
+            <li>
+                <a class="lista__link" href="#">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape__texto">® 2025 Thales Oliveira. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade</p>
+        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - <br>Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </body>
 
 </html>
