--- a/praticando_html_css/index.html
+++ b/praticando_html_css/index.html
@@ -74,26 +74,26 @@
     <footer class="rodape">
         <img src="img/Logo.png" alt="Alura+" class="rodape__logo">
         <ul class="rodape__lista">
-            <li>
-                <a class="lista__link" href="#">Idioma</a>
+            <li class="lista__link" >
+                <a href="#">Idioma</a>
             </li>
-            <li>
-                <a class="lista__link" href="#">Dispositivos Compatíveis</a>
+            <li class="lista__link" >
+                <a href="#">Dispositivos Compatíveis</a>
             </li>
-            <li>
-                <a class="lista__link" href="#">Contrato de assinatura</a>
+            <li class="lista__link" >
+                <a href="#">Contrato de assinatura</a>
             </li>
-            <li>
-                <a class="lista__link" href="#">Politica de privacidade</a>
+            <li class="lista__link" >
+                <a href="#">Politica de privacidade</a>
             </li>
-            <li>
-                <a class="lista__link" href="#">Proteção de dados no Brasil</a>
+            <li class="lista__link">
+                <a  href="#">Proteção de dados no Brasil</a>
             </li>
-            <li>
-                <a class="lista__link" href="#">Anúncios personalizados</a>
+            <li class="lista__link" >
+                <a href="#">Anúncios personalizados</a>
             </li>
-            <li>
-                <a class="lista__link" href="#">Ajuda</a>
+            <li class="lista__link" >
+                <a href="#">Ajuda</a>
             </li>
         </ul>
         <p class="rodape__texto">® 2025 Thales Oliveira. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade</p>
