Adicionado botão para acessar próximo projeto

--- a/html_css/index.html
+++ b/html_css/index.html
@@ -43,6 +43,10 @@
                     <img src="./assets/instagram.png" alt="imagem logo instagram">
                     Instagram
                 </a>
+
+                <a class="apresentacao__links__navegacao" target="_blank" href="../praticando_html_css/index.html">
+                    Acessar próximo projeto
+                </a>
             </div>
         </section>
         <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Foto da mulher programando">
