Ajustado link do novo projeto

--- a/html_css/index.html
+++ b/html_css/index.html
@@ -44,7 +44,7 @@
                     Instagram
                 </a>
 
-                <a class="apresentacao__links__navegacao" target="_blank" href="../praticando_html_css/index.html">
+                <a class="apresentacao__links__navegacao" target="_blank" href="https://praticando-html-css-nu.vercel.app/">
                     Acessar próximo projeto
                 </a>
             </div>
