Ajustado link do novo projeto

--- a/html_css/index.html
+++ b/html_css/index.html
@@ -44,8 +44,8 @@
                     Instagram
                 </a>
 
-                <a class="apresentacao__links__navegacao" target="_blank" href="https://praticando-html-css-nu.vercel.app/">
-                    Acessar próximo projeto
+                <a class="apresentacao__links__navegacao" href="https://praticando-html-css-nu.vercel.app/">
+                    Próximo projeto
                 </a>
             </div>
         </section>
