--- a/mobile_first/index.html
+++ b/mobile_first/index.html
@@ -56,7 +56,7 @@
             <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
         </section>
 
-        <sec class="carrosel">
+        <section class="carrosel">
             <h2 class="carrosel__titulo">Novos lançamentos</h2>
             <!-- Slider main container -->
             <div class="swiper">
@@ -79,7 +79,31 @@
                 <div class="swiper-button-next"></div>
             </div>
 
-        </sec>
+            <div class="card">
+                <!-- 1º linha -->
+                <div class="card__descricao">
+                    <!-- 1º coluna -->
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google</p>
+                    </div>
+                    <!-- 2º coluna -->
+                    <img src="img/Angular.svg" class="descricao__imagem">
+                </div>
+
+                <!-- 2º linha -->
+                <div class="card__botoes">
+                    <!-- 1º coluna -->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="img/Favoritos.svg" alt="favoritar livros"></li>
+                        <li class="botoes__item"><img src="img/Compras.svg" alt="adiicionar no carrinho de compras"></li>
+                    </ul>
+                    <!-- 2ºcoluna -->
+                     <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
+            </div>
+        </section>
 
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
