added mais vendidos carrosel and escritora card

--- a/mobile_first/index.html
+++ b/mobile_first/index.html
@@ -105,6 +105,54 @@
             </div>
         </section>
 
+        <section class="carrosel">
+            <h2 class="carrosel__titulo">Mais vendidos</h2>
+            <!-- Slider main container -->
+            <div class="swiper">
+                <!-- If we need pagination -->
+                <div class="swiper-pagination"></div>
+
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assettiva da alura books"></div>
+                <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="Livro sobre apache kafka e spring boot da alura books"></div>
+                <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em desing da alura books"></div>
+                <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="livro guia front end"></div>
+                <div class="swiper-slide"><img src="img/Portugol.svg" alt="livro sobre portugol"></div>
+                <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
+                </div>
+            
+                <!-- If we need navigation buttons -->
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
+
+            <div class="card">
+                <!-- 1º linha -->
+                <div class="card__descricao">
+                    <!-- 1º coluna -->
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Autora do Mês</h3>
+                        <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                        <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-end.</p>
+                    </div>
+                    <!-- 2º coluna -->
+                    <img src="img/Escritora.svg" class="descricao__imagem">
+                </div>
+
+                <!-- 2º linha -->
+                <div class="card__botoes">
+                    <!-- 1º coluna -->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="img/Favoritos.svg" alt="favoritar livros"></li>
+                        <li class="botoes__item"><img src="img/Compras.svg" alt="adiicionar no carrinho de compras"></li>
+                    </ul>
+                    <!-- 2ºcoluna -->
+                     <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
+            </div>
+
 
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script>
